# tauri-plugin-snapshot

./: CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: test.yml
examples/svelte-app/: package.json  pnpm-lock.yaml
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: error.rs  lib.rs  plugin.rs
src/plugin/: linux.rs  macos.rs  save.rs  types.rs  windows.rs
webview-dist/: index.d.ts  index.js  types.d.ts
webview-src/: index.ts  types.ts
